Added logout endpoint and adjusted response types of login and register endpoints
