# dictionary-service/src/main/java/com/tkd/dictionaryservice/controller/IamController.java
@@ -1,10 +1,11 @@
 package com.tkd.dictionaryservice.controller;
 
 import com.tkd.apis.IamV1Api;
+import com.tkd.dictionaryservice.dto.LogoutResponse;
 import com.tkd.dictionaryservice.dto.UserSession;
 import com.tkd.dictionaryservice.service.IamService;
-import com.tkd.models.AuthResponse;
 import com.tkd.models.LoginRequest;
+import com.tkd.models.LoginResponse;
 import com.tkd.models.RegistrationRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
@@ -19,7 +20,7 @@ public class IamController implements IamV1Api {
     private final IamService iamService;
 
     @Override
-    public ResponseEntity<AuthResponse> registerUser(RegistrationRequest body) {
+    public ResponseEntity<String> registerUser(RegistrationRequest body) {
         try {
             return ResponseEntity.ok(iamService.registerUser(body));
         } catch (Exception e) {
@@ -28,15 +29,24 @@ public class IamController implements IamV1Api {
     }
 
     @Override
-    public ResponseEntity<AuthResponse> loginUser(LoginRequest body) {
+    public ResponseEntity<LoginResponse> loginUser(LoginRequest body) {
         try {
             UserSession userSession = iamService.loginUser(body);
             return ResponseEntity.ok()
                     .header(HttpHeaders.SET_COOKIE, userSession.getResponseCookie().toString())
-                    .body(userSession.getAuthResponse());
+                    .body(userSession.getLoginResponse());
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).body(null);
         }
+    }
+
+    @Override
+    public ResponseEntity<String> logoutUser() {
+        LogoutResponse logoutResponse = iamService.logoutUser();
+
+        return ResponseEntity.ok()
+                .header(HttpHeaders.SET_COOKIE, logoutResponse.getResponseCookie().toString())
+                .body(logoutResponse.getMessage());
     }
 
     @Override
