# dictionary-service/src/main/java/com/tkd/dictionaryservice/dto/LogoutResponse.java
@@ -1,13 +1,12 @@
 package com.tkd.dictionaryservice.dto;
 
-import com.tkd.models.LoginResponse;
 import lombok.Builder;
 import lombok.Data;
 import org.springframework.http.ResponseCookie;
 
 @Data
 @Builder
-public class UserSession {
-    private LoginResponse loginResponse;
+public class LogoutResponse {
+    private String message;
     private ResponseCookie responseCookie;
 }
